# PythonCall.jl

./: .JuliaFormatter.toml  .gitignore  .travis.yml  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CITATION.bib  CondaPkg.toml  LICENSE  Project.toml  PythonCallDeps.toml  README.md  bump.jl  gcbench.jl  pyproject.toml  setup.cfg  setup.py  test_threads.py  versions.js
.github/: dependabot.yml
benchmark/: .gitignore  CondaPkg.toml  Project.toml  RESULTS.md  benchmark.jl  benchmark.py  benchmarks.jl  gcbench.jl  requirements.txt
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Project.toml  customdocs.jl  make.jl
examples/: flux.ipynb  seaborn.ipynb  seaborn.jl
ext/: CategoricalArraysExt.jl  JLD2Ext.jl  PyCallExt.jl
juliaaa/: __init__.py
juliacall/: __init__.py  all.py  deps.py  init.py  install.py  jlcompat.py  juliacalldeps.json  matplotlib.py  semver.py
juliapy/: setup.py
oldsrc/: PyIterable.jl  PyList.jl  PyObjectArray.jl  PyPandasDataFrame.jl  builtins.jl  init.jl
pytest/: test_all.py  test_nb.ipynb
python/: README.md  setup.cfg
python/juliacall/: __init__.py  deps.py  init.py  install.py  juliacalldeps.json  juliapkg.json  utils.py
src/: GC-api.jl  GC.jl  GIL-api.jl  GIL.jl  Py.jl  PyArray.jl  PyBuffer.jl  PyCode.jl  PyDict.jl  PyException.jl  PyIO.jl  PyInternedString.jl  PyIterable.jl  PyLazyBuiltinObject.jl  PyLazyObject.jl  PyList.jl  PyMacro.jl  PyObject.jl  PyObjectArray.jl  PyPandas.jl  PyPandasDataFrame.jl  PyRef.jl  PySet.jl  Python.jl  PythonCall.jl  api.jl  base.jl  bool.jl  builtins.jl  bytearray.jl  bytes.jl  cattrstructs.jl  cbuffer.jl  cconsts.jl  cmethodstructs.jl  collections.jl  complex.jl  conda.jl  config.jl  consts.jl  (+56 more)
srcold/: PythonCall.jl  err.jl  juliacall.jl  py_macro.jl
test/: Aqua.jl  C.jl  Compat.jl  CondaPkg.toml  Convert.jl  Core.jl  GC.jl  GIL.jl  HeapType.jl  JlWrap.jl  Numpy.jl  NumpyDates.jl  Project.toml  PyMacro.jl  Utils.jl  Wrap.jl  abstract.jl  aqua.jl  compat.jl  concrete.jl  context.jl  convert.jl  finalize_test_script.jl  jlwrap.jl  pyconvert.jl  pywrap.jl  runtests.jl  utils.jl
v0.1.0/: index.html  search_index.js
v0.2.0/: index.html  search_index.js
v0.2.1/: index.html
v0.3.0/: index.html  search_index.js
v0.4.0/: index.html
v0.4.1/: index.html  search_index.js
v0.4.2/: index.html
v0.4.3/: index.html  search_index.js
v0.5.0/: index.html  search_index.js
v0.5.1/: index.html  search_index.js
v0.6.0/: index.html  search_index.js
v0.6.1/: index.html  search_index.js
v0.7.0/: index.html  search_index.js
v0.8.0/: index.html  search_index.js
v0.9.0/: index.html  search_index.js
v0.9.1/: index.html  search_index.js
v0.9.10/: index.html  search_index.js  siteinfo.js
v0.9.11/: index.html  search_index.js  siteinfo.js
v0.9.12/: index.html  search_index.js  siteinfo.js
v0.9.13/: index.html  search_index.js  siteinfo.js
v0.9.14/: index.html  search_index.js  siteinfo.js
v0.9.15/: .documenter-siteinfo.json  index.html  search_index.js  siteinfo.js
v0.9.16/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js  siteinfo.js
v0.9.17/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js  siteinfo.js
v0.9.18/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js  siteinfo.js
v0.9.19/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js  siteinfo.js
v0.9.20/: .documenter-siteinfo.json  index.html  search_index.js  siteinfo.js
v0.9.21/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js  siteinfo.js
v0.9.22/: .documenter-siteinfo.json  index.html  (+1 more)
(+866 files in other folders)
