[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "juliacall"
version = "0.9.23"
description = "Julia and Python in seamless harmony"
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = ["juliapkg ~=0.1.8"]

[tool.hatch.build.targets.wheel]
packages = ["pysrc/juliacall"]

[tool.uv]
dev-dependencies = [
    "flake8",
    "pytest",
    "pytest-cov",
    "nbval",
    "numpy",
    "numpy ~=2.0; python_version >= '3.10'",
]
