[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "juliacall"
version = "0.9.24"
description = "Julia and Python in seamless harmony"
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = ["juliapkg ~=0.1.8"]

[tool.hatch.build.targets.wheel]
packages = ["pysrc/juliacall"]
