[metadata]
name = juliacall
version = 0.4.0
description = Julia-Python interoperability
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = juliacall
python_requires = >=3.3, <4
install_requires =
    jill ==0.9.7

[options.package_data]
juliacall = *.json
