[metadata]
name = juliacall
version = 0.9.20
description = Julia and Python in seamless harmony
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/JuliaPy/PythonCall.jl
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
    =pysrc
packages = juliacall
python_requires = ~=3.7
install_requires =
    juliapkg ~=0.1.8

[options.package_data]
juliacall =
    *.json
    *.jl
