[metadata]
name = juliacall
version = 0.6.0
description = Julia and Python in seamless harmony
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/cjdoris/PythonCall.jl
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
packages = juliacall
python_requires = ~=3.5
install_requires =
    juliapkg ~=0.1.0

[options.package_data]
juliacall = *.json
